test/typeCheckingTest/unprintableStatements.out

Error in phase Type Checking, line 13:
    Not able to print values of type 'Point'
